package Factory;

public class GifReader implements ImageReader {
    public void read(){
        System.out.println("读取GIF图片。");
    }
}
