package Factory;

public interface ImageReader {
    void read();
}
