package Factory;

public class JpgReader implements ImageReader {
    public void read(){
        System.out.println("读取JPG图片。");
    }
}
